--- a/PCA1.ipynb
+++ b/PCA1.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMdaCtxl9uze9YIwRC2UUDZ",
+      "authorship_tag": "ABX9TyM15Qaj7tgGcjN5YOBxukZf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qSc4Z8bsRVWY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install pandas"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "fqPVQOKQznaO",
         "colab_type": "code",
         "colab": {}
@@ -37,7 +50,8 @@
         "import seaborn as sns\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "%matplotlib inline"
+        "%matplotlib inline\n",
+        "from pandas.plotting import scatter_matrix"
       ],
       "execution_count": null,
       "outputs": []
@@ -90,33 +104,55 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "puMhPmAq7Zih",
-        "colab_type": "text"
-      },
-      "source": [
-        "Plot the data"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "5YdOzq4Fzyo5",
+        "id": "RA1LVhz4PNnQ",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "sns.lmplot( x =\"PC1\", y=\"PC2\",\n",
-        "  data=pc_df, \n",
-        "  fit_reg=False, \n",
-        "  hue='Cluster', # color by cluster\n",
-        "  legend=True,\n",
-        "  scatter_kws={\"s\": 80}\n",
-        "  ) # specify the point size"
+        "df = pd.DataFrame(X1)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ox274QizQ0rb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scatter_matrix(df, alpha=0.2, figsize=(12, 12), diagonal='kde')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GL6Z-3IKCiVV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.scatter(df.iloc[:,3],df.iloc[:,2],c=Y1)\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3lPmKdkrKuhc",
+        "colab_type": "text"
+      },
+      "source": [
+        " X1 is the 1000 x 10 data and Y1 is cluster assignment for the 1000 samples. Create a PCA model with 4 components from sklearn.decomposition."
+      ]
     },
     {
       "cell_type": "code",
@@ -132,6 +168,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5r2VcA6sK3Lv",
+        "colab_type": "text"
+      },
+      "source": [
+        "The simulated data is already centered and scales, so we can go ahead and fit the PCA model. We will fit the PCA model using fit_transform function to our data X1 and the result pc contains the principal components."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "w868S8UG0CFe",
@@ -145,21 +191,15 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "--Q4AebC7E2b",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PtaJgpbCLAqD",
+        "colab_type": "text"
       },
       "source": [
-        "pca = PCA(n_components = 5)\n",
-        "fit = pca.fit(X)\n",
-        "print((\"Explained Variance: %s\") % (fit.explained_variance_ratio_))\n",
-        "print(\"\\n\")\n",
-        "print(fit.components_)"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Make a pandas data frame with the principal components (PCs) and the known cluster assignments.\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -178,6 +218,40 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yJjAprJOLIQA",
+        "colab_type": "text"
+      },
+      "source": [
+        "Examine the variance explained by each principal component. \n",
+        "<br>The first two principal components explains over 70% of the variation in the data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2RR-pz-YLMr9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pca.explained_variance_ratio_"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LuWFVyK2LgTU",
+        "colab_type": "text"
+      },
+      "source": [
+        "Plot the Scree plot"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "4xDbG_di62K8",
@@ -185,8 +259,36 @@
         "colab": {}
       },
       "source": [
-        "df = pd.DataFrame({'var':pca.explained_variance_ratio_,'PC':['PC1','PC2','PC3','PC4','PC5']})\n",
+        "df = pd.DataFrame({'var':pca.explained_variance_ratio_,'PC':['PC1','PC2','PC3','PC4']})\n",
         "plt.plot('PC',\"var\",  data=df, color=\"c\");"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oT_rtiRdLoP1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Use the top two principal components and make a scatter plot. Use Seaborn’s lmplot to make the PCA plot using the fit_reg=False option and color clusters with ‘hue’."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XxOrz5YCLu3R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sns.lmplot( x=\"PC1\", y=\"PC2\",\n",
+        "  data=pc_df, \n",
+        "  fit_reg=False, \n",
+        "  hue='Cluster', # color by cluster\n",
+        "  legend=True,\n",
+        "  scatter_kws={\"s\": 80}) # specify the point size"
       ],
       "execution_count": null,
       "outputs": []
