--- a/PCA1.ipynb
+++ b/PCA1.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM15Qaj7tgGcjN5YOBxukZf",
+      "authorship_tag": "ABX9TyPxsUYdCGUp92iYDWRPodsu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qSc4Z8bsRVWY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!pip install pandas"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "fqPVQOKQznaO",
         "colab_type": "code",
         "colab": {}
@@ -51,22 +38,8 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "%matplotlib inline\n",
-        "from pandas.plotting import scatter_matrix"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "H_sWO2l2zrY5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# load make_blobs to simulate data\n",
+        "from pandas.plotting import scatter_matrix\n",
         "from sklearn.datasets import make_blobs\n",
-        "# load decomposition to do PCA analysis with sklearn\n",
         "from sklearn import decomposition"
       ],
       "execution_count": null,
@@ -117,6 +90,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WQmvp--aVP-_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Plot the data each dimension by dimension"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Ox274QizQ0rb",
@@ -151,6 +134,7 @@
         "colab_type": "text"
       },
       "source": [
+        " **Create a PCA model**\n",
         " X1 is the 1000 x 10 data and Y1 is cluster assignment for the 1000 samples. Create a PCA model with 4 components from sklearn.decomposition."
       ]
     },
