--- a/PCA0.ipynb
+++ b/PCA0.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA0.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPjDLh3P7rBG+GxUrK8y+We",
+      "authorship_tag": "ABX9TyPEWe3g9ulkOqizKpp8nA1p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,22 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "iqQfm_pdU0-k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo\n",
+        "!ls"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "R7DmpbtP2lnE",
         "colab_type": "code",
         "colab": {}
@@ -40,8 +56,8 @@
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.cm import register_cmap\n",
         "from scipy import stats\n",
-        "from sklearn.decomposition import PCA as sklearnPCA\n",
-        "import seaborn"
+        "from sklearn.decomposition import PCA \n",
+        "import seaborn\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -55,9 +71,7 @@
       },
       "source": [
         "#Load movie names and movie ratings\n",
-        "movies = pd.read_csv('C:UsersNeelTempDesktopPCA DATAmovies.csv')\n",
-        "ratings = pd.read_csv('C:UsersNeelTempDesktopPCA DATAratings.csv')\n",
-        "ratings.drop(['timestamp'], axis=1, inplace=True)"
+        "movies = pd.read_csv('movies_df.csv')"
       ],
       "execution_count": null,
       "outputs": []
@@ -65,17 +79,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "17H5mc6x5_8N",
+        "id": "AnnUyj2eVVIq",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def replace_name(x):\n",
-        "  return movies[movies['movieId']==x].title.values[0]\n",
-        "\n",
-        "\n",
-        "ratings.movieId = ratings.movieId.map(replace_name)\n",
-        "M = ratings.pivot_table(index=['userId'], columns=['movieId'], values='rating')\n",
+        "movies = pd.DataFrame(movies)\n",
+        "movies"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bq2aElQxusw-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "movies.drop(['title','genres'],axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RbsQfgrRhZFY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "M = movies.pivot_table(index=['userId_x'], columns=['movieId'], values='rating')\n",
         "m = M.shape\n",
         "df1 = M.replace(np.nan, 0, regex=True)"
       ],
