--- a/PCA0.ipynb
+++ b/PCA0.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA0.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPEWe3g9ulkOqizKpp8nA1p",
+      "authorship_tag": "ABX9TyNIRnOCavBDJi0ecLV9UqTp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qCvnmAIwweZr",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Clone the repo**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iqQfm_pdU0-k",
@@ -40,6 +50,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jAnAtGR1wh16",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Import libraries**"
+      ]
     },
     {
       "cell_type": "code",
@@ -61,6 +81,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zNXU-8X1wlpw",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Load and prepare the data**"
+      ]
     },
     {
       "cell_type": "code",
@@ -119,6 +149,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NKy-XDYzwu7S",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Scale the data**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6ZfqbzQZ6Cle",
@@ -130,6 +170,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MYIGL-QbwyN0",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Compute covariance matrix**"
+      ]
     },
     {
       "cell_type": "code",
@@ -145,6 +195,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nbBxpUqbxKNj",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Compute the Principal Components of the data set**"
+      ]
     },
     {
       "cell_type": "code",
@@ -164,6 +224,43 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zWV8m9eMxd5_",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Compute the feature vector**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z3lszu_uxeG4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Visually confirm that the list is correctly sorted by decreasing eigenvalues\n",
+        "eig_pairs = [(np.abs(eig_vals[i]), eig_vecs[:,i]) for i in range(len(eig_vals))]\n",
+        "print('Eigenvalues in descending order:')\n",
+        "for i in eig_pairs:\n",
+        "  print(i[0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s4Oz2-kgxsLr",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Use the PCA() function to reduce the dimensionality of the data set**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "VHAH-JMH6Sr0",
@@ -177,6 +274,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bkls9TJPxztU",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Scree plot expresses the variance associated with each principal component**"
+      ]
     },
     {
       "cell_type": "code",
@@ -194,6 +301,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q_VMFIY1x7Jl",
+        "colab_type": "text"
+      },
+      "source": [
+        "The scree plot clearly indicates that the first 500 principal components contain the maximum information (variance) within the data. Note that the initial data set had approximately 9000 features which can now be narrowed down to just 500. Thus, you can now easily perform further analysis on the data since the redundant or insignificant variables are out. This is the power of dimensionality reduction."
+      ]
     }
   ]
 }
