--- a/Hierarchical_Clustering_1.ipynb
+++ b/Hierarchical_Clustering_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNj/xB5ZhEUztS8H66WdShs",
+      "authorship_tag": "ABX9TyNVS3Rexodh/zYz0EzxV/kp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,13 +70,13 @@
         "Steps to Perform Agglomerative Hierarchical Clustering\n",
         "We are going to explain the most used and important Hierarchical clustering i.e. agglomerative. The steps to perform the same is as follows −\n",
         "\n",
-        ">Step 1 − Treat each data point as single cluster. Hence, we will be having, say K clusters at start. The number of data points will also be K at start.\n",
+        ">Step 1 − Treat each data point as single cluster. So, there are K clusters at the start. The number of data points will also be K at start.\n",
         "\n",
-        ">Step 2 − Now, in this step we need to form a big cluster by joining two closet datapoints. This will result in total of K-1 clusters.\n",
+        ">Step 2 − To form a cluster by joining two closet datapoints. This will result in total of K-1 clusters.\n",
         "\n",
-        ">Step 3 − Now, to form more clusters we need to join two closet clusters. This will result in total of K-2 clusters.\n",
+        ">Step 3 − Form more clusters, by joining two closest clusters. This will result in total of K-2 clusters.\n",
         "\n",
-        ">Step 4 − Now, to form one big cluster repeat the above three steps until K would become 0 i.e. no more data points left to join.\n",
+        ">Step 4 − Form one big cluster by repeating the above three steps until K would become 0 i.e. no more data points left to join.\n",
         "\n",
         ">Step 5 − At last, after making one single big cluster, dendrograms will be used to divide into multiple clusters depending upon the problem.<br><br>\n",
         "\n",
@@ -98,7 +98,7 @@
         "from matplotlib import pyplot as plt\n",
         "from sklearn.cluster import AgglomerativeClustering\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
         "#NUMBER OF CLUSTERS\n",
         "C = 3"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "                  random_state=0)\n",
         "\n",
         "labels = range(1, N+1)\n",
-        "plt.figure(figsize = (10, 10))\n",
+        "plt.figure(figsize = (7, 7))\n",
         "plt.subplots_adjust(bottom = 0.1)\n",
         "plt.scatter(X[:,0],X[:,1], label = 'True Position')\n",
         "for label, x, y in zip(labels, X[:, 0], X[:, 1]):\n",
@@ -149,7 +149,7 @@
         "      label,xy = (x, y), xytext = (-3, 3),textcoords = 'offset points', ha = 'right', va = 'bottom')\n",
         "plt.show()\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,9 @@
         "colab_type": "text"
       },
       "source": [
-        "It is very easy to see that we have two clusters in our datapoints but in the real world data, there can be thousands of clusters. Next, we will be plotting the dendrograms of our datapoints by using Scipy library"
+        "We can see that we have three clusters in our datapoints but in the real world data, there can be thousands of clusters. \n",
+        "<br>\n",
+        "Next, we will be plotting the dendrograms of our datapoints by using Scipy library"
       ]
     },
     {
@@ -169,7 +171,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Once the big cluster is formed, the longest vertical distance is selected. A vertical line is then drawn through it. As the horizontal line crosses the blue line at two points, the number of clusters would be two."
+        "Once the big cluster is formed, the longest vertical distance is selected. <br>\n",
+        "A vertical line is then drawn through it. As the horizontal line crosses the blue line at two points, the number of clusters would be two."
       ]
     },
     {
@@ -188,7 +191,7 @@
         "plt.ylabel('distance')\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,10 +212,10 @@
         "colab": {}
       },
       "source": [
-        "cluster = AgglomerativeClustering(n_clusters = 2, affinity = 'euclidean', linkage = 'ward')\n",
+        "cluster = AgglomerativeClustering(n_clusters = 3, affinity = 'euclidean', linkage = 'ward')\n",
         "cluster.fit_predict(X)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +238,7 @@
       "source": [
         "plt.scatter(X[:,0],X[:,1], c = cluster.labels_, cmap = 'rainbow')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
