--- a/Hierarchical_Clustering_2.ipynb
+++ b/Hierarchical_Clustering_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOkMtFPNqr5ZczWhMnm9Xmm",
+      "authorship_tag": "ABX9TyP+n4C9XQRrV66FvYvJHa1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,16 +26,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "UADUpUNpD4V0",
-        "colab_type": "text"
-      },
-      "source": [
-        "https://towardsdatascience.com/machine-learning-algorithms-part-12-hierarchical-agglomerative-clustering-example-in-python-1e18e0075019#:~:text=Looking%20at%20the%20dendrogram%2C%20the,number%20of%20clusters%20is%205.\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "tHK0Fgfi4NoJ",
@@ -47,7 +37,7 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +66,7 @@
         "import scipy.cluster.hierarchy as shc\n",
         "from sklearn.cluster import AgglomerativeClustering"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +76,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Get the data and prepare the data<br>"
+        "Get the data and prepare the data<br>\n",
+        "The data is from the pima indians diabetes dataset. <br>\n",
+        "The class is 0 or 1. This is the outcome of the person getting diabetes or not,"
       ]
     },
     {
@@ -101,7 +93,20 @@
         "headernames = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
         "data = read_csv(path, names = headernames)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fv3wv69lx42h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,10 +117,20 @@
         "colab": {}
       },
       "source": [
-        "#!cat pima_indians_diabetes.csv\n"
+        "#!cat pima_indians_diabetes.csv"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rLrmdsi-xj_r",
+        "colab_type": "text"
+      },
+      "source": [
+        "Convert all the data to numeric data"
+      ]
     },
     {
       "cell_type": "code",
@@ -137,8 +152,31 @@
         "data[\"age\"] = pd.to_numeric(data[1:][\"age\"], downcast=\"float\")\n",
         "data[\"class\"] = pd.to_numeric(data[1:][\"class\"], downcast=\"float\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G0-JceoSye8S",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CCvRBIW4y9V9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Split the data into features and labels"
+      ]
     },
     {
       "cell_type": "code",
@@ -152,8 +190,18 @@
         "X = array[:,0:8]\n",
         "Y = array[:,8]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dqNvcEi5zB44",
+        "colab_type": "text"
+      },
+      "source": [
+        "Drop the 0 row."
+      ]
     },
     {
       "cell_type": "code",
@@ -165,7 +213,7 @@
       "source": [
         "data = data.drop([0])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,11 +224,21 @@
         "colab": {}
       },
       "source": [
-        "data.shape\n",
-        "data.tail()"
+        "print(data.shape)\n",
+        "data.head()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "krJEFzDmzT9z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Examine the data stats"
+      ]
     },
     {
       "cell_type": "code",
@@ -192,8 +250,18 @@
       "source": [
         "data.describe"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "avamStkKzX-c",
+        "colab_type": "text"
+      },
+      "source": [
+        "Pick two features to plot"
+      ]
     },
     {
       "cell_type": "code",
@@ -205,7 +273,7 @@
       "source": [
         "patient_data = data[\"skin\"], data[\"test\"]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +289,7 @@
         "plt.xlabel(\"skin\")\n",
         "plt.ylabel(\"test\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +299,12 @@
         "colab_type": "text"
       },
       "source": [
-        "Starting from each label at the bottom, you can see a vertical line up to a horizontal line. The height of that horizontal line tells you about the distance at which this label was merged into another label or cluster. You can find that other cluster by following the other vertical line down again. If you don't encounter another horizontal line, it was just merged with the other label you reach, otherwise it was merged into another cluster that was formed earlier."
+        "The dendrograms<br>\n",
+        "Starting from each label at the bottom, you can see a vertical line up to a horizontal line. <br>\n",
+        "The height of that horizontal line tells the distance at which this label was merged into another label or cluster. <br>\n",
+        "You can find that other cluster by following the other vertical line down again. <br>\n",
+        "\n",
+        "If you don't encounter another horizontal line, it was just merged with the other label you reach, otherwise it was merged into another cluster that was formed earlier."
       ]
     },
     {
@@ -241,9 +314,9 @@
         "colab_type": "text"
       },
       "source": [
-        "horizontal lines are cluster merges\n",
-        "vertical lines tell you which clusters/labels were part of merge forming that new cluster\n",
-        "heights of the horizontal lines tell you about the distance that needed to be \"bridged\" to form the new cluster"
+        "Horizontal lines are cluster merges<br>\n",
+        "Vertical lines tell you which clusters/labels were part of merge forming that new cluster<br>\n",
+        "Heights of the horizontal lines tell you about the distance that needed to be \"bridged\" to form the new cluster"
       ]
     },
     {
@@ -260,7 +333,7 @@
         "plt.ylabel('distance')\n",
         "dend = shc.dendrogram(shc.linkage(data, method = 'ward'))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +343,7 @@
         "colab_type": "text"
       },
       "source": [
-        "A huge jump in distance is typically what we're interested in if we want to argue for a certain number of clusters. "
+        "A huge jump in distance is typically what we're interested in if we want to select for a certain number of clusters. "
       ]
     },
     {
@@ -305,8 +378,18 @@
         "            plt.axhline(y=max_d, c='k')\n",
         "    return ddata\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-1jBtjjN0HtK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Set the cutoff for the distance"
+      ]
     },
     {
       "cell_type": "code",
@@ -320,7 +403,7 @@
         "max_d = 2500  # max_d as in max_distance\n",
         "Z = shc.linkage(data, 'ward')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,8 +426,18 @@
         ")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BO8hBE0e0Z0T",
+        "colab_type": "text"
+      },
+      "source": [
+        "Make predictions"
+      ]
     },
     {
       "cell_type": "code",
@@ -357,8 +450,20 @@
         "cluster = AgglomerativeClustering(n_clusters = 2, affinity = 'euclidean', linkage = 'ward')\n",
         "cluster.fit_predict(patient_data)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zDCIbC911CD1",
+        "colab_type": "text"
+      },
+      "source": [
+        "scipy.cluster.hierarchy.fcluster can be used to flatten the dendrogram, obtaining as a result an assignation of the original data points to single clusters.<br>\n",
+        "\n",
+        "This assignation mostly depends on a distance threshold t - the maximum inter-cluster distance allowed:"
+      ]
     },
     {
       "cell_type": "code",
@@ -372,7 +477,7 @@
         "clusters = fcluster(Z, max_d, criterion='distance')\n",
         "clusters"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,7 +493,7 @@
         "plt.xlabel(\"skin\")\n",
         "plt.ylabel(\"test\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
