--- a/CrossValidation.ipynb
+++ b/CrossValidation.ipynb
@@ -6,7 +6,7 @@
       "name": "CrossValidation.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNgbjacp8K0Q4wxl0yduTGe",
+      "authorship_tag": "ABX9TyMcCSrn9R+Xzdy9tHR3FtjS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,6 +141,41 @@
       },
       "source": [
         "train_test_split(y, shuffle=False)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cWOvHjPITK1P",
+        "colab_type": "text"
+      },
+      "source": [
+        "K-Fold Cross Validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aNachWlKTOVJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.model_selection import KFold\n",
+        "X = np.array([[1, 2], [3, 4], [1, 2], [3, 4]])\n",
+        "y = np.array([1, 2, 3, 4])\n",
+        "kf = KFold(n_splits=2)\n",
+        "kf.get_n_splits(X)\n",
+        "\n",
+        "print(kf)\n",
+        "\n",
+        "for train_index, test_index in kf.split(X):\n",
+        "    print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
+        "    X_train, X_test = X[train_index], X[test_index]\n",
+        "    y_train, y_test = y[train_index], y[test_index]"
       ],
       "execution_count": null,
       "outputs": []
