--- a/CrossValidation.ipynb
+++ b/CrossValidation.ipynb
@@ -6,7 +6,7 @@
       "name": "CrossValidation.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMcCSrn9R+Xzdy9tHR3FtjS",
+      "authorship_tag": "ABX9TyNqtnpPDtpqIP6BRuCxh9Nf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h6cikBZkfyMk",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Train-test split**"
+      ]
     },
     {
       "cell_type": "code",
@@ -152,7 +162,7 @@
         "colab_type": "text"
       },
       "source": [
-        "K-Fold Cross Validation"
+        "# **K-Fold Cross Validation**"
       ]
     },
     {
@@ -163,7 +173,6 @@
         "colab": {}
       },
       "source": [
-        "import numpy as np\n",
         "from sklearn.model_selection import KFold\n",
         "X = np.array([[1, 2], [3, 4], [1, 2], [3, 4]])\n",
         "y = np.array([1, 2, 3, 4])\n",
@@ -179,6 +188,43 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ni7DYbxhb0Hu",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Random Shuffle Split**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HEaFgCPib0SK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import ShuffleSplit\n",
+        "X = np.arange(10)\n",
+        "ss = ShuffleSplit(n_splits=5, test_size=0.25, random_state=0)\n",
+        "for train_index, test_index in ss.split(X):\n",
+        "    print(\"%s %s\" % (train_index, test_index))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XPX_JAdwftIU",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://scikit-learn.org/stable/modules/cross_validation.html\n"
+      ]
     }
   ]
 }
