--- a/FeatureSelection.ipynb
+++ b/FeatureSelection.ipynb
@@ -6,7 +6,7 @@
       "name": "FeatureSelection.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNrmNLEN9GVFwTZIniilW++",
+      "authorship_tag": "ABX9TyPQwuyfkatNrH6UK3gxUA3d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,12 +60,40 @@
         "import time\n",
         "import os\n",
         "\n",
-        "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-        "    for filename in filenames:\n",
-        "        print(os.path.join(dirname, filename))"
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import classification_report,confusion_matrix\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn import svm\n",
+        "from sklearn import tree\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "#for dirname, _, filenames in os.walk('/kaggle/input'):\n",
+        "#    for filename in filenames:\n",
+        "#        print(os.path.join(dirname, filename))"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3NVdjjRJ-q6q",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Get and prepare the data**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hC8hmMo6-4rf",
+        "colab_type": "text"
+      },
+      "source": [
+        "p = poisonous<br>\n",
+        "e = edible\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -77,7 +105,7 @@
       "source": [
         "df = pd.read_csv('datasets_478_974_mushrooms.csv')\n",
         "pd.options.display.max_columns = None\n",
-        "df.head()\n"
+        "df.head()"
       ],
       "execution_count": null,
       "outputs": []
@@ -147,10 +175,20 @@
       },
       "source": [
         "X = df.drop(['class'], axis = 1)\n",
-        "Y = df['class']\n"
+        "Y = df['class']"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Tpkn1wYA8fn",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Convert data from categorical data to one-hot**"
+      ]
     },
     {
       "cell_type": "code",
@@ -167,17 +205,40 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b-jIB9qABKTj",
+        "colab_type": "text"
+      },
+      "source": [
+        "Changing to one-hot means many more columns. <br>\n",
+        "From 14 to 118 columns"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "KWwMa9Ut1z8U",
+        "id": "5bLi8GYRBEZN",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "len(X.columns)\n"
+        "X.shape"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P7ri6RGnBY8_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Change the classes from <br>\n",
+        "poisonous to 0 <br>\n",
+        "edible to 1<br>"
+      ]
     },
     {
       "cell_type": "code",
@@ -195,6 +256,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RQEyyrz2B_nQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Standarize the data<br>\n",
+        "Split the data into training and test"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "AjHzf7Op18Vj",
@@ -202,20 +274,22 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report,confusion_matrix\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn import svm\n",
-        "from sklearn import tree\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "\n",
         "X2 = StandardScaler().fit_transform(X)\n",
         "\n",
         "X_Train, X_Test, Y_Train, Y_Test = train_test_split(X2, Y, test_size = 0.30, random_state = 101)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rLquqe32CSTe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create and train a logistic regression model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -227,13 +301,23 @@
       "source": [
         "start = time.process_time()\n",
         "trainedmodel = LogisticRegression().fit(X_Train,Y_Train)\n",
-        "print(time.process_time() - start)\n",
+        "print(\"time = \", time.process_time() - start)\n",
         "predictions =trainedmodel.predict(X_Test)\n",
-        "print(confusion_matrix(Y_Test,predictions))\n",
+        "print(\"Confusion Matrix:\\n\",confusion_matrix(Y_Test,predictions))\n",
         "print(classification_report(Y_Test,predictions))"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GQAGlhn7Cn2k",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create and train a support vector model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -245,13 +329,23 @@
       "source": [
         "start = time.process_time()\n",
         "trainedsvm = svm.LinearSVC().fit(X_Train, Y_Train)\n",
-        "print(time.process_time() - start)\n",
+        "print(\"time = \", time.process_time() - start)\n",
         "predictionsvm = trainedsvm.predict(X_Test)\n",
-        "print(confusion_matrix(Y_Test,predictionsvm))\n",
+        "print(\"Confusion Matrix:\\n\",confusion_matrix(Y_Test,predictionsvm))\n",
         "print(classification_report(Y_Test,predictionsvm))"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kWJmKVEMFH5K",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create and train a decision tree model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -263,9 +357,9 @@
       "source": [
         "start = time.process_time()\n",
         "trainedtree = tree.DecisionTreeClassifier().fit(X_Train, Y_Train)\n",
-        "print(time.process_time() - start)\n",
+        "print(\"time = \",time.process_time() - start)\n",
         "predictionstree = trainedtree.predict(X_Test)\n",
-        "print(confusion_matrix(Y_Test,predictionstree))\n",
+        "print(\"Confusion Matrix:\\n\",confusion_matrix(Y_Test,predictionstree))\n",
         "print(classification_report(Y_Test,predictionstree))"
       ],
       "execution_count": null,
